@@ -130,18 +130,17 @@ gboolean perform_test(TEST_ID testId){
 
 int main(int argc, char** argv){
     int argIndex=1;
-    if (strcmp(argv[argIndex],"-V")==0){
-	verboseMsg_set_level(VERBOSE_MSG_WARNING);
-	argIndex++;
-    }else if (strcmp(argv[argIndex],"-V1")==0){
-	verboseMsg_set_level(VERBOSE_MSG_INFO1);
-	argIndex++;
-    }else if (strcmp(argv[argIndex],"-V2")==0){
-	verboseMsg_set_level(VERBOSE_MSG_INFO2);
-	argIndex++;
-    }else{
-	verboseMsg_set_level(VERBOSE_MSG_WARNING);
+    int verboseLevel=VERBOSE_MSG_WARNING;
+    if (argc<2){
+	printf("Usage: %s [-V num] <test num> \n",argv[0]);
+	return 1;
     }
+    if (strcmp(argv[argIndex],"-V")==0){
+	verboseLevel=atoi(argv[++argIndex]);
+	argIndex++;
+    }
+    verboseMsg_set_level(verboseLevel);
+
     int test_index=atoi(argv[argIndex]);
     if (test_index>=TEST_NUM || test_index<0){
 	printf("Invalid test number.\n");
