@@ -1,3 +1,10 @@
+- New Features:
+  Option -v is available for all programs.
+- Fixed:
+- Changed:
+  + All programs are use [-V number] instead of multiple V.
+  + Argument const_count in stringList_sized_new() is removed.
+
 * Mon Oct 20 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.3-0
 - New Features:
   collection.h, file_function.h and verboseMsg.h is in API.
